# dagr

./: .travis.yml  CMakeLists.txt  CTestConfig.cmake  LICENSE.md  README.md  dagr_config.h.in
CMake/: dagr_app.cmake  dagr_python.cmake  dagr_test.cmake
alg/: CMakeLists.txt  dagr_apply_binary_mask.cxx  dagr_apply_binary_mask.h  dagr_binary_segmentation.cxx  dagr_binary_segmentation.h  dagr_cartesian_mesh_regrid.cxx  dagr_cartesian_mesh_regrid.h  dagr_cartesian_mesh_subset.cxx  dagr_cartesian_mesh_subset.h  dagr_connected_components.cxx  dagr_connected_components.h  dagr_dataset_capture.cxx  dagr_dataset_capture.h  dagr_dataset_diff.cxx  dagr_dataset_diff.h  dagr_dataset_source.cxx  dagr_dataset_source.h  dagr_derived_quantity.cxx  dagr_derived_quantity.h  dagr_derived_quantity_numerics.h  dagr_descriptive_statistics.cxx  dagr_descriptive_statistics.h  dagr_distance_function.h  dagr_evaluate_expression.cxx  dagr_evaluate_expression.h  dagr_geometry.h  dagr_l2_norm.cxx  dagr_l2_norm.h  dagr_mask.cxx  dagr_mask.h  dagr_parser.cxx  dagr_parser.h  dagr_programmable_algorithm.cxx  dagr_programmable_algorithm.h  dagr_programmable_algorithm_fwd.h  dagr_programmable_reduce.cxx  dagr_programmable_reduce.h  dagr_programmable_reduce_fwd.h  dagr_table_reduce.cxx  dagr_table_reduce.h  (+15 more)
core/: CMakeLists.txt  dagr_algorithm.cxx  dagr_algorithm.h  dagr_algorithm_executive.cxx  dagr_algorithm_executive.h  dagr_algorithm_executive_fwd.h  dagr_algorithm_fwd.h  dagr_algorithm_output_port.h  dagr_binary_stream.cxx  dagr_binary_stream.h  dagr_calendar.cxx  dagr_calendar.h  dagr_common.h  dagr_dataset.cxx  dagr_dataset.h  dagr_dataset_fwd.h  dagr_metadata.cxx  dagr_metadata.h  dagr_mpi_manager.cxx  dagr_mpi_manager.h  dagr_output_port.h  dagr_parallel_id.cxx  dagr_parallel_id.h  dagr_program_options.h  dagr_shared_object.h  dagr_temporal_reduction.cxx  dagr_temporal_reduction.h  dagr_temporal_reduction_fwd.h  dagr_thread_pool.h  dagr_threaded_algorithm.cxx  dagr_threaded_algorithm.h  dagr_threaded_algorithm_fwd.h  dagr_threadsafe_queue.h  dagr_time_step_executive.cxx  dagr_time_step_executive.h  dagr_type_select.h  dagr_uuid.h  dagr_variant_array.cxx  dagr_variant_array.h  dagr_variant_array_fwd.h
data/: CMakeLists.txt  dagr_array_collection.cxx  dagr_array_collection.h  dagr_array_collection_fwd.h  dagr_cartesian_mesh.cxx  dagr_cartesian_mesh.h  dagr_cartesian_mesh_fwd.h  dagr_coordinate_util.cxx  dagr_coordinate_util.h  dagr_database.cxx  dagr_database.h  dagr_database_fwd.h  dagr_mesh.cxx  dagr_mesh.h  dagr_mesh_fwd.h  dagr_table.cxx  dagr_table.h  dagr_table_collection.cxx  dagr_table_collection.h  dagr_table_collection_fwd.h  dagr_table_fwd.h  dagr_uniform_cartesian_mesh.cxx  dagr_uniform_cartesian_mesh.h  dagr_uniform_cartesian_mesh_fwd.h
io/: CMakeLists.txt  dagr_cartesian_mesh_reader.h  dagr_cf_cartesian_mesh_writer.cxx  dagr_cf_cartesian_mesh_writer.h  dagr_file_util.cxx  dagr_file_util.h  dagr_table_reader.cxx  dagr_table_writer.cxx  dagr_table_writer.h  dagr_vtk_cartesian_mesh_writer.cxx  dagr_vtk_cartesian_mesh_writer.h  dagr_vtk_util.cxx  dagr_vtk_util.h
python/: CMakeLists.txt  dagr.py  dagr_py.i  dagr_py_alg.i  dagr_py_algorithm.h  dagr_py_array.h  dagr_py_buffer.i  dagr_py_common.i  dagr_py_core.i  dagr_py_data.i  dagr_py_gil_state.h  dagr_py_io.i  dagr_py_iterator.h  dagr_py_object.h  dagr_py_sequence.h  dagr_py_system.i
python/CMake/: dagr_python.cmake
system/: CMakeLists.txt  dagr_system_interface.cxx  dagr_system_interface.h
system/CMake/: dagr_system_platform_test.cmake  dagr_system_platform_test.cpp
test/: CMakeLists.txt  dagr_test_util.cxx  dagr_test_util.h  test_binary_stream.cpp  test_cartesian_mesh_regrid.cpp  test_connected_components.cpp  test_dataset_diff.cpp  test_descriptive_statistics.cpp  test_evaluate_expression_table.cpp  test_parser.cpp  test_pipeline_branches.cpp  test_pipeline_temporal_reduction.cpp  test_pipeline_time_average.cpp  test_stack_trace_signal_handler.cpp  test_table_reader.cpp  test_table_reader_distribute.cpp  test_table_region_mask.cpp  test_table_remove_rows.cpp  test_table_sort.cpp  test_table_writer.cpp  test_temporal_average.cpp  test_type_select.cpp  test_variant_array_operator.cpp
test/python/: CMakeLists.txt  test_array_collection.py  test_connected_components.py  test_database.py  test_derived_quantity.py  test_event_filter.py  test_metadata.py  test_programmable_algorithm.py  test_programmable_map_reduce.py  test_variant_array.py  test_vector_ops.py
test/test_array/: CMakeLists.txt  array.cxx  array.h  array_add.cxx  array_add.h  array_executive.cxx  array_executive.h  array_fwd.h  array_scalar_multiply.cxx  array_scalar_multiply.h  array_source.cxx  array_source.h  array_temporal_stats.cxx  array_temporal_stats.h  array_time_average.cxx  array_time_average.h  array_writer.cxx  array_writer.h
test/travis_ci/: ctest_linux.cmake  ctest_osx.cmake  install_linux.sh  install_osx.sh
